refactor split packages