@@ -45,10 +45,6 @@ limitations under the License.
         </dependency>
         <dependency>
             <groupId>net.automatalib</groupId>
-            <artifactId>automata-core</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>net.automatalib</groupId>
             <artifactId>automata-serialization-dot</artifactId>
         </dependency>
 
@@ -79,6 +75,11 @@ limitations under the License.
         </dependency>
         <dependency>
             <groupId>net.automatalib</groupId>
+            <artifactId>automata-core</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>net.automatalib</groupId>
             <artifactId>automata-util</artifactId>
             <scope>test</scope>
         </dependency>
@@ -95,4 +96,18 @@ limitations under the License.
             <artifactId>testng</artifactId>
         </dependency>
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <!-- core is only a testing dependency not defined in module-info.java -->
+                    <!-- append to existing argLine to nicely work together with jacoco plugin -->
+                    <argLine>@{argLine} --add-reads=net.automatalib.visualization.dot=net.automatalib.core</argLine>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
